@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :nascimento %><br />
-    <%= f.date_select :nascimento, :end_year => Time.now.year, :start_year => Time.now.year-100 %>
+    <%= f.date_select :nascimento, :end_year => Time.now.year, :start_year => Time.now.year-100, :use_month_names => Hospede.meses %>
   </p>
   <p>
     <%= f.label :pais, 'País' %><br />
